trunk/Archive2/08/e4cf677b536a11/output
In file included from main.cpp:1:
In file included from /usr/local/include/boost/variant.hpp:17:
In file included from /usr/local/include/boost/variant/variant.hpp:18:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/cstddef:51:11: error: no member named 'max_align_t' in the global namespace
  using ::max_align_t;
        ~~^
1 error generated.
